--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,8 +35,17 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 .icon {
-  font-size: 10px;
+  font-size: 30px;
+  color: blue;
+}
+
+.icon:hover {
+  cursor: pointer;
+}
+
+.icon:active {
+  color: rgb(17, 128, 136);
 }
